Work Directory Added

--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+<%- include("header.ejs") -%> 
+
 <body>
-    <h1 class = "box" id = "heading">Today is a <%= kindOfDay %>!</h1>
+    <h1 class = "box" id = "heading">Today is <%= kindOfTodo %>!</h1>
 
     <div class = "box">
                 <% for(var i=0;i < newListItem.length;i++){ %>
@@ -24,6 +18,6 @@
                 </form>
             
     </div>
-    
 </body>
-</html>
+
+<%- include("footer.ejs") -%> 
